--- a/_pages/group.html
+++ b/_pages/group.html
@@ -5,7 +5,7 @@ author_profile: true
 ---
 
 {% include base_path %}
-<img src='/image/mengjiaoma.jpg'> 
+
 Mengjiao Ma  
 Ph.D. student (Since 2022)  
 Research:  
@@ -13,10 +13,8 @@ Research:
 Office: CMEE 16-417  
 Email: mengjiao@nuaa.edu.cn  
 
-<image id="chengyuzheng" src="/image/chengyuzheng.png" width="110" height="160">    
 Chengyu Zheng  
-
-M.Sc. student (Since 2020)  
+Ph.D. student (Since 2022)  
 Research:  
 Machine Learning  
 Office: CMEE 15-509  
