--- a/_pages/group.html
+++ b/_pages/group.html
@@ -20,4 +20,16 @@ author_profile: true
             <b> Email: </b> mengjiaoma@nuaa.edu.cn <br />
             </div>           
             </li>
+                
+ <!--2-->  <li>
+	   <div class="people-img"> <img src="images/chengyuzheng.png" width="110" height="160"></div>
+	    <div class="people-infor">
+            <p class="name" id="Chengyu_Zheng">Chengyu Zheng</p>
+            <p class="grade">Ph.D. student (Since 2022)</p> 
+            <b>Research:</b> <br />
+            Vision Simultaneous Localization and Mapping<br />
+            <b> Office: </b> 106A <br />
+            <b> Email: </b> zhengcy@nuaa.edu.cn  <br />
+            </div> 
+            </li>
 </body>
