--- a/_pages/group.html
+++ b/_pages/group.html
@@ -32,4 +32,6 @@ author_profile: true
             <b> Email: </b> zhengcy@nuaa.edu.cn  <br />
             </div> 
             </li>
+<!--clear--> <div style="clear:both;"></div>            
+        </ul>
 </body>
