--- a/_pages/group.html
+++ b/_pages/group.html
@@ -3,7 +3,10 @@ layout: archive
 permalink: /group/                  
 author_profile: true
 ---
-
+<style>
+.divleft{ float:left; width:100px}
+.divright{ float:right; width:100px}
+</style>
 
 <body>
         <h2>Ph.D. Students</h2><br />
@@ -18,6 +21,7 @@ author_profile: true
             3D Point Clouds Processing<br />
             <b> Office: </b> 106A <br />
             <b> Email: </b> mengjiaoma@nuaa.edu.cn <br />
+		   
             </div>           
             </li>
                 
