--- a/_pages/group.html
+++ b/_pages/group.html
@@ -15,8 +15,7 @@ author_profile: true
         <ul id="phdstudent">           
 
 <!--1-->   <li>
-	    <div class="divleft">
-            <div class="people-img"> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></div>
+            <div class="people-img" style="float:left"> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></div>
             <div class="people-infor">
             <p class="name" id="Mengjiao_Ma">Mengjiao Ma</p>
             <p class="grade">Ph.D. student (Since 2022)</p> 
@@ -24,14 +23,11 @@ author_profile: true
             3D Point Clouds Processing<br />
             <b> Office: </b> 106A <br />
             <b> Email: </b> mengjiaoma@nuaa.edu.cn <br />   
-            </div>
-			
-	    </div>		
+            </div>		
             </li>
                 
  <!--2-->  <li>
-		 <div class="divright">
-	   <div class="people-img"> <img src="images/chengyuzheng.png" width="110" height="160"></div>
+	   <div class="people-img" style="float:reight"> <img src="images/chengyuzheng.png" width="110" height="160"></div>
 	    <div class="people-infor">
             <p class="name" id="Chengyu_Zheng">Chengyu Zheng</p>
             <p class="grade">Ph.D. student (Since 2022)</p> 
@@ -40,8 +36,6 @@ author_profile: true
             <b> Office: </b> 106A <br />
             <b> Email: </b> zhengcy@nuaa.edu.cn  <br />
             </div> 
-			 
-	   </div>
             </li>
 <!--clear--> <div style="clear:both;"></div>            
         </ul> 
