--- a/_pages/group.html
+++ b/_pages/group.html
@@ -3,19 +3,14 @@ layout: archive
 permalink: /group/                  
 author_profile: true
 ---
-<head>
-	<style>
-	.divleft{ float:left; width:100px}
-	.divright{ float:right; width:100px}
-	</style>
-</head>
 
 <body>
-        <h2>Ph.D. Students</h2><br />
+        <h1>PhD Students</h1><br />
         <ul id="phdstudent">           
 
 <!--1-->   <li>
-            <div class="people-img" style="float:left"> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></div>
+	    <div style="float:left">
+            <div class="people-img" > <img src="/images/mengjiaoma1.jpg" width="110" height="160"></div>
             <div class="people-infor">
             <p class="name" id="Mengjiao_Ma">Mengjiao Ma</p>
             <p class="grade">Ph.D. student (Since 2022)</p> 
@@ -23,11 +18,13 @@ author_profile: true
             3D Point Clouds Processing<br />
             <b> Office: </b> 106A <br />
             <b> Email: </b> mengjiaoma@nuaa.edu.cn <br />   
-            </div>		
+            </div>
+	    </div>
             </li>
                 
  <!--2-->  <li>
-	   <div class="people-img" style="float:reight"> <img src="images/chengyuzheng.png" width="110" height="160"></div>
+	   <div style="float:right">
+	   <div class="people-img"> <img src="images/chengyuzheng.png" width="110" height="160"></div>
 	    <div class="people-infor">
             <p class="name" id="Chengyu_Zheng">Chengyu Zheng</p>
             <p class="grade">Ph.D. student (Since 2022)</p> 
@@ -36,7 +33,14 @@ author_profile: true
             <b> Office: </b> 106A <br />
             <b> Email: </b> zhengcy@nuaa.edu.cn  <br />
             </div> 
+            </div> 
             </li>
+		
 <!--clear--> <div style="clear:both;"></div>            
         </ul> 
+	
+	 <h1>Master Students</h1><br />
+        <ul id="masterstudent">
+		<div style="clear:both;"></div>            
+        </ul>
 </body>
