--- a/_pages/group.html
+++ b/_pages/group.html
@@ -26,7 +26,7 @@ author_profile: true
                 
  <!--2-->  <li>
 	    <div style="float:right">
-            <div class="people-img" > <img src="/images/chengyuzheng.jpg" width="110" height="160"></div>
+            <div class="people-img" > <img src="/images/zhengchengyu.jpg" width="110" height="160"></div>
             <div class="people-infor">
             <p class="name-grade" id="Chengyu_Zheng">
 	    <b>Chengyu Zheng</b> <br />
