--- a/_pages/group.html
+++ b/_pages/group.html
@@ -10,7 +10,7 @@ author_profile: true
 <table border="0">
 <tr>
   <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
-  <td> <img src="/images/zhengchengyu.jpg.jpg" width="110" height="160"></td>
+  <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
   <td> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></td>
 </tr>
 <tr>
