--- a/_pages/group.html
+++ b/_pages/group.html
@@ -27,15 +27,15 @@ author_profile: true
 <tr>
   <td><b>Research: </b> <br />
             3D Measurement and Inspection<br />
-            <b> Office: </b> 106A <br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> weizeyong1@gmail.com <br />  </td>
   <td><b>Research: </b> <br />
             Machine Learning<br />
-            <b> Office: </b> 106A <br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> zhengcy@nuaa.edu.cn <br />  </td>
   <td><b>Research: </b> <br />
             3D Point Clouds Processing<br />
-            <b> Office: </b> 106A <br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> mengjiaoma@nuaa.edu.cn <br />  </td>
 </tr>
 </table>
