--- a/_pages/group.html
+++ b/_pages/group.html
@@ -7,7 +7,7 @@ author_profile: true
 <body>
         <h1>PhD Students</h1><br />
         <ul id="phdstudent">           
-<table border="1">
+<table border="0">
 <tr>
   <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
   <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
@@ -41,13 +41,48 @@ author_profile: true
 </table>
 
 		
+		
 <!--clear--> <div style="clear:both;"></div>            
         </ul> 
 	
+	
 	 
-	<h1>Master Students</h1><br />
-        <ul id="masterstudent">
+<h1>Master Students</h1><br />
+<ul id="masterstudent">
 		
+<table border="1">
+<tr>
+  <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
+  <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></td>
+</tr>
+<tr>
+  <td> <p class="name-grade" id="Mengjiao_Ma">
+	    <b>Zeying Wei</b> <br />
+	    Ph.D. student (Since 2022)</p></td>
+  <td> <p class="name-grade" id="Mengjiao_Ma">
+	    <b>Chengyu Zheng</b> <br />
+	    Ph.D. student (Since 2022)</p></td>
+  <td> <p class="name-grade" id="Mengjiao_Ma">
+	    <b>Mengjiao Ma</b> <br />
+	    Ph.D. student (Since 2022)</p></td>
+</tr>
+<tr>
+  <td><b>Research: </b> <br />
+            3D Measurement and Inspection<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> weizeyong1@gmail.com <br />  </td>
+  <td><b>Research: </b> <br />
+            Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> zhengcy@nuaa.edu.cn <br />  </td>
+  <td><b>Research: </b> <br />
+            3D Point Clouds Processing<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> mengjiaoma@nuaa.edu.cn <br />  </td>
+</tr>
+</table>
+	
 <!--clear--> <div style="clear:both;"></div>            
         </ul>
 	
