--- a/_pages/group.html
+++ b/_pages/group.html
@@ -14,10 +14,10 @@ author_profile: true
   <td> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></td>
 </tr>
 <tr>
-  <td> <p class="name-grade" id="Mengjiao_Ma">
+  <td> <p class="name-grade" id="Zeyong_Wei">
 	    <b>Zeying Wei</b> <br />
 	    Ph.D. student (Since 2022)</p></td>
-  <td> <p class="name-grade" id="Mengjiao_Ma">
+  <td> <p class="name-grade" id="Cengyu_Zheng">
 	    <b>Chengyu Zheng</b> <br />
 	    Ph.D. student (Since 2022)</p></td>
   <td> <p class="name-grade" id="Mengjiao_Ma">
@@ -52,34 +52,34 @@ author_profile: true
 		
 <table border="1">
 <tr>
-  <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
-  <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
-  <td> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></td>
+  <td> <img src="/images/hufei.jpg" width="110" height="160"></td>
+  <td> <img src="/images/shiding.jpg" width="110" height="160"></td>
+  <td> <img src="/images/chanbaian.jpg" width="110" height="160"></td>
 </tr>
 <tr>
-  <td> <p class="name-grade" id="Mengjiao_Ma">
-	    <b>Zeying Wei</b> <br />
-	    Ph.D. student (Since 2022)</p></td>
-  <td> <p class="name-grade" id="Mengjiao_Ma">
-	    <b>Chengyu Zheng</b> <br />
-	    Ph.D. student (Since 2022)</p></td>
-  <td> <p class="name-grade" id="Mengjiao_Ma">
-	    <b>Mengjiao Ma</b> <br />
-	    Ph.D. student (Since 2022)</p></td>
+  <td> <p class="name-grade" id="Fei_Hu">
+	    <b>Fei Hu</b> <br />
+	    M.Sc. student (Since 2020)</p></td>
+  <td> <p class="name-grade" id="Ding_Shi">
+	    <b>Ding Shi</b> <br />
+	    M.Sc. student (Since 2020)</p></td>
+  <td> <p class="name-grade" id="Baian_Chen">
+	    <b>Baian Chen</b> <br />
+	    M.Sc. student (Since 2021)</p></td>
 </tr>
 <tr>
-  <td><b>Research: </b> <br />
-            3D Measurement and Inspection<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> weizeyong1@gmail.com <br />  </td>
   <td><b>Research: </b> <br />
             Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> zhengcy@nuaa.edu.cn <br />  </td>
+            <b> Email: </b> 1127368546@nuaa.edu.cn <br />  </td>
   <td><b>Research: </b> <br />
-            3D Point Clouds Processing<br />
+            Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> mengjiaoma@nuaa.edu.cn <br />  </td>
+            <b> Email: </b> 704623189@qq.com <br />  </td>
+  <td><b>Research: </b> <br />
+            Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> sx2116068@nuaa.edu.cn <br />  </td>
 </tr>
 </table>
 	
