--- a/_pages/group.html
+++ b/_pages/group.html
@@ -7,7 +7,7 @@ author_profile: true
 <body>
         <h1>PhD Students</h1><br />
         <ul id="phdstudent">           
-<table border="0";style="boder:none">
+<table border="0";style="border:none">
 <tr>
   <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
   <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
@@ -16,31 +16,31 @@ author_profile: true
 <tr>
   <td> <p class="name-grade" id="Zeyong_Wei">
 	    <b>Zeying Wei</b> <br />
-	    Ph.D. student (Since 2022)</p></td>
+	    Ph.D. student (Since 2022)</p>
+	<p class="other-info" id="Fei_Hu">
+	    <b>Research: </b> 3D Measurement and Inspection<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> weizeyong1@gmail.com </p> 
+	</td>
   <td> <p class="name-grade" id="Cengyu_Zheng">
 	    <b>Chengyu Zheng</b> <br />
-	    Ph.D. student (Since 2022)</p></td>
+	    Ph.D. student (Since 2022)</p>
+	  <p class="other-info" id="Cengyu_Zheng">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> zhengcy@nuaa.edu.cn </p> 
+	</td>
   <td> <p class="name-grade" id="Mengjiao_Ma">
 	    <b>Mengjiao Ma</b> <br />
-	    Ph.D. student (Since 2022)</p></td>
-</tr>
-<tr>
-  <td><b>Research: </b> <br />
-            3D Measurement and Inspection<br />
+	    Ph.D. student (Since 2022)</p>
+	<p class="other-info" id="Mengjiao_Ma">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> weizeyong1@gmail.com <br />  </td>
-  <td><b>Research: </b> <br />
-            Machine Learning<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> zhengcy@nuaa.edu.cn <br />  </td>
-  <td><b>Research: </b> <br />
-            3D Point Clouds Processing<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> mengjiaoma@nuaa.edu.cn <br />  </td>
+            <b> Email: </b> mengjiao@nuaa.edu.cn </p> 
+	</td>
 </tr>
 </table>
 
-		
 		
 <!--clear--> <div style="clear:both;"></div>            
         </ul> 
@@ -54,32 +54,32 @@ author_profile: true
 <tr>
   <td> <img src="/images/hufei.jpg" width="110" height="160"></td>
   <td> <img src="/images/shiding.jpg" width="110" height="160"></td>
-  <td> <img src="/images/chanbaian.jpg" width="110" height="160"></td>
+  <td> <img src="/images/chenbaian.jpg" width="110" height="160"></td>
 </tr>
 <tr>
   <td> <p class="name-grade" id="Fei_Hu">
 	    <b>Fei Hu</b> <br />
-	    M.Sc. student (Since 2020)</p></td>
+	    M.Sc. student (Since 2020)</p>
+	<p class="other-info" id="Fei_Hu">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> 1127368546@nuaa.edu.cn </p></td>
+	
   <td> <p class="name-grade" id="Ding_Shi">
 	    <b>Ding Shi</b> <br />
-	    M.Sc. student (Since 2020)</p></td>
+	    M.Sc. student (Since 2020)</p>
+	<p class="other-info" id="Ding_Shi">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> 704623189@qq.com </p></td>
+	
   <td> <p class="name-grade" id="Baian_Chen">
 	    <b>Baian Chen</b> <br />
-	    M.Sc. student (Since 2021)</p></td>
-</tr>
-<tr>
-  <td><b>Research: </b> <br />
-            Machine Learning<br />
+	    M.Sc. student (Since 2021)</p>
+	<p class="other-info" id="Baian_Chen">
+	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> 1127368546@nuaa.edu.cn <br />  </td>
-  <td><b>Research: </b> <br />
-            Machine Learning<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> 704623189@qq.com <br />  </td>
-  <td><b>Research: </b> <br />
-            Machine Learning<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> sx2116068@nuaa.edu.cn <br />  </td>
+            <b> Email: </b> sx2116068@nuaa.edu.cn </p></td>
 </tr>
 </table>
 	
