--- a/_pages/group.html
+++ b/_pages/group.html
@@ -7,7 +7,7 @@ author_profile: true
 <body>
         <h1>PhD Students</h1><br />
         <ul id="phdstudent">           
-<table border="0";style="border:none">
+<table border="0";style="border:none; box-shadow: none;">
 <tr>
   <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
   <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
