--- a/_pages/group.html
+++ b/_pages/group.html
@@ -7,7 +7,7 @@ author_profile: true
 <body>
         <h1>PhD Students</h1><br />
         <ul id="phdstudent">           
-<table border="0";style="border:none; box-shadow: none;">
+<table border: {0 none} ;style="border:none; box-shadow: none;">
 <tr>
   <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
   <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
@@ -50,7 +50,7 @@ author_profile: true
 <h1>Master Students</h1><br />
 <ul id="masterstudent">
 		
-<table border="1">
+<table border="0">
 <tr>
   <td> <img src="/images/hufei.jpg" width="110" height="160"></td>
   <td> <img src="/images/shiding.jpg" width="110" height="160"></td>
