--- a/_pages/group.html
+++ b/_pages/group.html
@@ -4,10 +4,17 @@ permalink: /group/
 author_profile: true
 ---
 
+<style>
+  tr, td, th {
+    vertical-align: middle;
+    border: 0px solid #bdc1c4;
+  }
+</style>
+
 <body>
         <h1>PhD Students</h1><br />
         <ul id="phdstudent">           
-<table border: {0 none} ;style="border:none; box-shadow: none;">
+<table style="border:0px solid #bdc1c4; box-shadow: none;">
 <tr>
   <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
   <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
