--- a/_pages/group.html
+++ b/_pages/group.html
@@ -5,10 +5,11 @@ author_profile: true
 ---
 
 <style>
-  tr, td, th {
+  table, tr, td, th {
     vertical-align: middle;
     border: 0px solid #bdc1c4;
-  }
+    box-shadow: none;  
+}
 </style>
 
 <body>
@@ -57,7 +58,7 @@ author_profile: true
 <h1>Master Students</h1><br />
 <ul id="masterstudent">
 		
-<table border="0">
+<table>
 <tr>
   <td> <img src="/images/hufei.jpg" width="110" height="160"></td>
   <td> <img src="/images/shiding.jpg" width="110" height="160"></td>
