--- a/_pages/group.html
+++ b/_pages/group.html
@@ -15,7 +15,7 @@ author_profile: true
 <body>
         <h1>PhD Students</h1><br />
         <ul id="phdstudent">           
-<table style="border:0px solid #bdc1c4; box-shadow: none;">
+<table>
 <tr>
   <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
   <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
