--- a/_pages/group.html
+++ b/_pages/group.html
@@ -17,20 +17,51 @@ author_profile: true
         <ul id="phdstudent">           
 <table>
 <tr>
-  <td> <img src="/images/weizeyong.jpg" width="110" height="160"></td>
-  <td> <img src="/images/zhengchengyu.jpg" width="110" height="160"></td>
-  <td> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/yongzhenwang.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/lipenggu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/zeyongwei.jpg" width="110" height="160"></td>
 </tr>
 <tr>
+  <td> <p class="name-grade" id="Yongzhen_Wang">
+	    <b>Yongzhen Wang</b> <br />
+	    Ph.D. student (Since 2019)</p>
+	<p class="other-info" id="Fei_Hu">
+	    <b>Research: </b> Image Restoration and Object Detection<br />
+            <b> Office: </b> 313, College of Computer Science and Technology <br />
+            <b> Email: </b> wangyz@nuaa.edu.cn </p> 
+	</td>
+  <td> <p class="name-grade" id="Lipeng_Gu">
+	    <b>Lipeng Gu</b> <br />
+	    Ph.D. student (Since 2022)</p>
+	  <p class="other-info" id="Cengyu_Zheng">
+	    <b>Research: </b> 3D Object Detection and Tracking<br />
+            <b> Office: </b> 313, College of Computer Science and Technology <br />
+            <b> Email: </b>  glp1224@163.com/gulp1224@nuaa.edu.cn </p> 
+	</td>
   <td> <p class="name-grade" id="Zeyong_Wei">
-	    <b>Zeying Wei</b> <br />
+	    <b>Zeyong Wei</b> <br />
 	    Ph.D. student (Since 2022)</p>
 	<p class="other-info" id="Fei_Hu">
 	    <b>Research: </b> 3D Measurement and Inspection<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> weizeyong1@gmail.com </p> 
 	</td>
-  <td> <p class="name-grade" id="Cengyu_Zheng">
+</tr>
+	<tr>
+  <td> <img src="/images/group/pengli.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/zhengchengyu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/zhezhu.jpg" width="110" height="160"></td>
+</tr>
+<tr>
+  <td> <p class="name-grade" id="Peng_Li">
+	    <b>Peng Li</b> <br />
+	    Ph.D. student (Since 2022)</p>
+	<p class="other-info" id="Fei_Hu">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> pengl@nuaa.edu.cn </p> 
+	</td>
+  <td> <p class="name-grade" id="Chengyu_Zheng">
 	    <b>Chengyu Zheng</b> <br />
 	    Ph.D. student (Since 2022)</p>
 	  <p class="other-info" id="Cengyu_Zheng">
@@ -38,14 +69,31 @@ author_profile: true
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> zhengcy@nuaa.edu.cn </p> 
 	</td>
+  <td> <p class="name-grade" id="Zhe_Zhu">
+	    <b>Zhe Zhu</b> <br />
+	    Ph.D. student (Since 2022)</p>
+	<p class="other-info" id="Zhe_Zhu">
+	    <b>Research: </b> Machine Learning <br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> zhuzhe0619@163.com </p> 
+	</td>
+</tr>
+<tr>
+  <td> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></td>
+  <td> 
+  <td>
+</tr>
+<tr>
   <td> <p class="name-grade" id="Mengjiao_Ma">
 	    <b>Mengjiao Ma</b> <br />
 	    Ph.D. student (Since 2022)</p>
-	<p class="other-info" id="Mengjiao_Ma">
+       <p class="other-info" id="Mengjiao_Ma">
 	    <b>Research: </b> 3D Point Clouds Processing<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> mengjiao@nuaa.edu.cn </p> 
-	</td>
+  </td>
+  <td> </td>
+  <td> </td>
 </tr>
 </table>
 
