Update master student information

--- a/_pages/group.html
+++ b/_pages/group.html
@@ -49,14 +49,14 @@ author_profile: true
 </tr>
 	<tr>
   <td> <img src="/images/group/pengli.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/zhengchengyu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/chengyuzheng.png" width="110" height="160"></td>
   <td> <img src="/images/group/zhezhu.jpg" width="110" height="160"></td>
 </tr>
 <tr>
   <td> <p class="name-grade" id="Peng_Li">
 	    <b>Peng Li</b> <br />
 	    Ph.D. student (Since 2022)</p>
-	<p class="other-info" id="Fei_Hu">
+	<p class="other-info" id="Peng_Li">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> pengl@nuaa.edu.cn </p> 
@@ -64,7 +64,7 @@ author_profile: true
   <td> <p class="name-grade" id="Chengyu_Zheng">
 	    <b>Chengyu Zheng</b> <br />
 	    Ph.D. student (Since 2022)</p>
-	  <p class="other-info" id="Cengyu_Zheng">
+	  <p class="other-info" id="Chengyu_Zheng">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> zhengcy@nuaa.edu.cn </p> 
@@ -79,9 +79,9 @@ author_profile: true
 	</td>
 </tr>
 <tr>
-  <td> <img src="/images/mengjiaoma1.jpg" width="110" height="160"></td>
-  <td> 
-  <td>
+  <td> <img src="/images/group/mengjiaoma.jpg" width="110" height="160"></td>
+  <td> </td>
+  <td></td>
 </tr>
 <tr>
   <td> <p class="name-grade" id="Mengjiao_Ma">
@@ -108,9 +108,9 @@ author_profile: true
 		
 <table>
 <tr>
-  <td> <img src="/images/hufei.jpg" width="110" height="160"></td>
-  <td> <img src="/images/shiding.jpg" width="110" height="160"></td>
-  <td> <img src="/images/chenbaian.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/feihu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/dingshi.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/jingboqiu.jpg" width="110" height="160"></td>
 </tr>
 <tr>
   <td> <p class="name-grade" id="Fei_Hu">
@@ -129,13 +129,178 @@ author_profile: true
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> 704623189@qq.com </p></td>
 	
+  <td> <p class="name-grade" id="Jingbo_Qiu">
+	    <b>Jingbo Qiu</b> <br />
+	    M.Sc. student (Since 2020)</p>
+	<p class="other-info" id="Baian_Chen">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> qiujingbo@nuaa.edu.cn </p></td>
+</tr>
+<tr>
+  <td> <img src="/images/group/baianchen.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/chenchen.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/haoranpan.jpg" width="110" height="160"></td>
+</tr>
+<tr>
   <td> <p class="name-grade" id="Baian_Chen">
 	    <b>Baian Chen</b> <br />
 	    M.Sc. student (Since 2021)</p>
 	<p class="other-info" id="Baian_Chen">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> sx2116068@nuaa.edu.cn </p></td>
+            <b> Email: </b> 1127368546@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Chen_Chen">
+	    <b>Chen Chen</b> <br />
+	    M.Sc. student (Since 2021)</p>
+	<p class="other-info" id="Chen_Chen">
+	    <b>Research: </b> 3D Point Cloud Semantic Segmentation<br />
+            <b> Office: </b> 313, College of Computer Science and Technology <br />
+            <b> Email: </b> chenxx@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Haoran_Pan">
+	    <b>Baian Chen</b> <br />
+	    M.Sc. student (Since 2021)</p>
+	<p class="other-info" id="Haoran_Pan">
+	    <b>Research: </b> 3D Measurement and Inspection<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> phaoran1999@nuaa.edu.cn </p></td>
+</tr>
+<tr>
+  <td> <img src="/images/group/huajiansi.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/zhileichen.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/xinli.jpg" width="110" height="160"></td>
+</tr>
+<tr>
+  <td> <p class="name-grade" id="Huajian_Si">
+	    <b>Huajian Si</b> <br/>
+	    M.Sc. student (Since 2021)</p>
+	<p class="other-info" id="Huajian_Si">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> sihuajian@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Zhilei_Chen">
+	    <b>Zhilei Chen</b> <br />
+	    M.Sc. student (Since 2021)</p>
+	<p class="other-info" id="Zhilei_Chen">
+	    <b>Research: </b> Machine Learning and Data-Driven 3D Data Analysis<br />
+            <b> Office: </b> 313, College of Computer Science and Technology <br />
+            <b> Email: </b> zhil_chen@outlook.com </p></td>
+	
+  <td> <p class="name-grade" id="Xin_Li">
+	    <b>Xin Li</b> <br />
+	    M.Sc. student (Since 2021)</p>
+	<p class="other-info" id="Xin_Li">
+	    <b>Research: </b> Computer Vision<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> lx0303@nuaa.edu.cn </p></td>
+</tr>
+<tr>
+  <td> <img src="/images/group/zhangyingweng.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/yongyuanli.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/xinghe.jpg" width="110" height="160"></td>
+</tr>
+<tr>
+  <td> <p class="name-grade" id="Zhangying_Weng">
+	    <b>Zhangying Weng</b> <br/>
+	    M.Sc. student (Since 2021)</p>
+	<p class="other-info" id="Zhangying_Weng">
+	    <b>Research: </b> Infrared Small Target Detection<br />
+            <b> Office: </b> 313, College of Computer Science and Technology <br />
+            <b> Email: </b> wengzhangy@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Yongyuan_Li">
+	    <b>Yongyuan Li</b> <br />
+	    M.Sc. student (Since 2021)</p>
+	<p class="other-info" id="Yongyuan_Li">
+	    <b>Research: </b> Point cloud optical flow estimation<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> 2511724912@nuaa.edu.cn </p></td>
+   <td><p class="name-grade" id="Xing_He">
+	    <b>Xing_He</b> <br />
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Xing_He">
+	    <b>Research: </b> Machine Learning and Data-Driven 3D Data Analysis<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> hexing@nuaa.edu.cn </p></td>
+</tr>
+<tr>
+  <td> <img src="/images/group/yihuafan.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/zhaoweichen.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/jiewang.jpg" width="110" height="160"></td>
+</tr>
+<tr>
+  <td> <p class="name-grade" id="Yihua_Fan">
+	    <b>Yihua Fan</b> <br/>
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Yihua_Fan">
+	    <b>Research: </b> Image Restoration and Detection<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> fanyihua@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Zhaowei_Chen">
+	    <b>Zhaowei Chen</b> <br />
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Zhaowei_Chen">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> chenzw@nuaa.edu.cn </p></td>
+   <td><p class="name-grade" id="Jie_Wang">
+	    <b>Jie Wang</b> <br />
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Jie_Wang">
+	    <b>Research: </b> 2D Image Processing<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> wangjie_6866@163.com </p></td>
+</tr>
+	<tr>
+  <td> <img src="/images/group/zhikunwen.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/xiaoqinpeng.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/dongli.jpg" width="110" height="160"></td>
+</tr>
+<tr>
+  <td> <p class="name-grade" id="Zhikun_Wen">
+	    <b>Zhikun Wen</b> <br/>
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Zhikun_Wen">
+	    <b>Research: </b> 3D Point Cloud Processing<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> zhikun_wen@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Xiaoqin_Peng">
+	    <b>Xiaoqin Peng</b> <br />
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Xiaoqin_Peng">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> pengxiaoqin@nuaa.edu.cn </p></td>
+   <td><p class="name-grade" id="Dong_Li">
+	    <b>Dong Li</b> <br />
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Dong_Li">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> donny1i@nuaa.edu.cn </p></td>
+</tr>
+	
+<tr>
+  <td> <img src="/images/group/yinuozheng.jpg" width="110" height="160"></td>
+  <td> </td>
+  <td></td>
+</tr>
+<tr>
+  <td> <p class="name-grade" id="Yinuo_Zheng">
+	    <b>Yinuo Zheng</b> <br />
+	    M.Sc. student (Since 2023)</p>
+       <p class="other-info" id="Yinuo_Zheng">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> 582952298@qq.com </p> 
+  </td>
+  <td> </td>
+  <td> </td>
 </tr>
 </table>
 	
