--- a/_pages/group.html
+++ b/_pages/group.html
@@ -36,7 +36,7 @@ author_profile: true
 	  <p class="other-info" id="Cengyu_Zheng">
 	    <b>Research: </b> 3D Object Detection and Tracking<br />
             <b> Office: </b> 313, College of Computer Science and Technology <br />
-            <b> Email: </b>  glp1224@163.com/gulp1224@nuaa.edu.cn </p> 
+            <b> Email: </b> glp1224@163.com <br /></b>gulp1224@nuaa.edu.cn<br /></p> 
 	</td>
   <td> <p class="name-grade" id="Zeyong_Wei">
 	    <b>Zeyong Wei</b> <br />
@@ -139,8 +139,8 @@ author_profile: true
 </tr>
 <tr>
   <td> <img src="/images/group/baianchen.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/chenchen.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/haoranpan.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/chenchen.JPG" width="110" height="160"></td>
+  <td> <img src="/images/group/haoranpan.png" width="110" height="160"></td>
 </tr>
 <tr>
   <td> <p class="name-grade" id="Baian_Chen">
@@ -160,7 +160,7 @@ author_profile: true
             <b> Email: </b> chenxx@nuaa.edu.cn </p></td>
 	
   <td> <p class="name-grade" id="Haoran_Pan">
-	    <b>Baian Chen</b> <br />
+	    <b>Haoran Pan</b> <br />
 	    M.Sc. student (Since 2021)</p>
 	<p class="other-info" id="Haoran_Pan">
 	    <b>Research: </b> 3D Measurement and Inspection<br />
@@ -186,7 +186,7 @@ author_profile: true
 	    M.Sc. student (Since 2021)</p>
 	<p class="other-info" id="Zhilei_Chen">
 	    <b>Research: </b> Machine Learning and Data-Driven 3D Data Analysis<br />
-            <b> Office: </b> 313, College of Computer Science and Technology <br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> zhil_chen@outlook.com </p></td>
 	
   <td> <p class="name-grade" id="Xin_Li">
