--- a/_pages/group.html
+++ b/_pages/group.html
@@ -257,7 +257,7 @@ author_profile: true
 </tr>
 	<tr>
   <td> <img src="/images/group/zhikunwen.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/xiaoqinpeng.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/xiaoqinpeng.JPG" width="110" height="160"></td>
   <td> <img src="/images/group/dongli.jpg" width="110" height="160"></td>
 </tr>
 <tr>
