--- a/_pages/group.html
+++ b/_pages/group.html
@@ -149,7 +149,7 @@ author_profile: true
 	<p class="other-info" id="Baian_Chen">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> 1127368546@nuaa.edu.cn </p></td>
+            <b> Email: </b> sx2116068@nuaa.edu.cn </p></td>
 	
   <td> <p class="name-grade" id="Chen_Chen">
 	    <b>Chen Chen</b> <br />
@@ -215,11 +215,11 @@ author_profile: true
 	    <b>Yongyuan Li</b> <br />
 	    M.Sc. student (Since 2021)</p>
 	<p class="other-info" id="Yongyuan_Li">
-	    <b>Research: </b> Point cloud optical flow estimation<br />
+	    <b>Research: </b> Point Cloud Optical Flow Estimation<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> 2511724912@nuaa.edu.cn </p></td>
    <td><p class="name-grade" id="Xing_He">
-	    <b>Xing_He</b> <br />
+	    <b>Xing He</b> <br />
 	    M.Sc. student (Since 2022)</p>
 	<p class="other-info" id="Xing_He">
 	    <b>Research: </b> Machine Learning and Data-Driven 3D Data Analysis<br />
@@ -284,7 +284,11 @@ author_profile: true
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> donny1i@nuaa.edu.cn </p></td>
 </tr>
+</table>
 	
+<h1>Undergraduate Students</h1><br />
+<ul id="undergraduatestudent">
+<table>
 <tr>
   <td> <img src="/images/group/yinuozheng.jpg" width="110" height="160"></td>
   <td> </td>
@@ -293,7 +297,7 @@ author_profile: true
 <tr>
   <td> <p class="name-grade" id="Yinuo_Zheng">
 	    <b>Yinuo Zheng</b> <br />
-	    M.Sc. student (Since 2023)</p>
+	    Undergraduate student (Since 2019)</p>
        <p class="other-info" id="Yinuo_Zheng">
 	    <b>Research: </b> 3D Point Clouds Processing<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
