--- a/_pages/group.html
+++ b/_pages/group.html
@@ -300,8 +300,7 @@ author_profile: true
 	    Undergraduate student (Since 2019)</p>
        <p class="other-info" id="Yinuo_Zheng">
 	    <b>Research: </b> 3D Point Clouds Processing<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> 582952298@qq.com </p> 
+            <b> Email: </b> 582952298@qq.com <br /></p> 
   </td>
   <td> </td>
   <td> </td>
