Update group.html(add 2023 students)

--- a/_pages/group.html
+++ b/_pages/group.html
@@ -17,28 +17,12 @@ author_profile: true
         <ul id="phdstudent">           
 <table>
 <tr>
-  <td> <img src="/images/group/yongzhenwang.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/lipenggu.jpg" width="110" height="160"></td>
   <td> <img src="/images/group/zeyongwei.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/lipenggu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/yunliu.jpg" width="110" height="160"></td>
 </tr>
 <tr>
-  <td> <p class="name-grade" id="Yongzhen_Wang">
-	    <b>Yongzhen Wang</b> <br />
-	    Ph.D. student (Since 2019)</p>
-	<p class="other-info" id="Fei_Hu">
-	    <b>Research: </b> Image Restoration and Object Detection<br />
-            <b> Office: </b> 313, College of Computer Science and Technology <br />
-            <b> Email: </b> wangyz@nuaa.edu.cn </p> 
-	</td>
-  <td> <p class="name-grade" id="Lipeng_Gu">
-	    <b>Lipeng Gu</b> <br />
-	    Ph.D. student (Since 2022)</p>
-	  <p class="other-info" id="Cengyu_Zheng">
-	    <b>Research: </b> 3D Object Detection and Tracking<br />
-            <b> Office: </b> 313, College of Computer Science and Technology <br />
-            <b> Email: </b> glp1224@163.com <br /></b>gulp1224@nuaa.edu.cn<br /></p> 
-	</td>
-  <td> <p class="name-grade" id="Zeyong_Wei">
+ <td> <p class="name-grade" id="Zeyong_Wei">
 	    <b>Zeyong Wei</b> <br />
 	    Ph.D. student (Since 2022)</p>
 	<p class="other-info" id="Fei_Hu">
@@ -46,16 +30,40 @@ author_profile: true
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> weizeyong1@gmail.com </p> 
 	</td>
+  <td> <p class="name-grade" id="Lipeng_Gu">
+	    <b>Lipeng Gu</b> <br />
+	    Ph.D. student (Since 2022)</p>
+	  <p class="other-info" id="Yun_Liu">
+	    <b>Research: </b> 3D Object Detection and Tracking<br />
+            <b> Office: </b> 313, College of Computer Science and Technology <br />
+            <b> Email: </b> glp1224@163.com <br /></b>gulp1224@nuaa.edu.cn<br /></p> 
+	</td>
+  <td> <p class="name-grade" id="Yun_Liu">
+	    <b>Yongzhen Wang</b> <br />
+	    Ph.D. student (Since 2019)</p>
+	<p class="other-info" id="Fei_Hu">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
+            <b> Office: </b> 313, College of Computer Science and Technology <br />
+            <b> Email: </b> yun.liu.lydia@gmail.com </p> 
+	</td>
 </tr>
 	<tr>
+  <td> <img src="/images/group/mengjiaoma.jpg" width="110" height="160"></td>
   <td> <img src="/images/group/pengli.jpg" width="110" height="160"></td>
   <td> <img src="/images/group/chengyuzheng.png" width="110" height="160"></td>
-  <td> <img src="/images/group/zhezhu.jpg" width="110" height="160"></td>
 </tr>
 <tr>
+   <td> <p class="name-grade" id="Mengjiao_Ma">
+	    <b>Mengjiao Ma</b> <br />
+	    Ph.D. student (Since 2022)</p>
+       <p class="other-info" id="Mengjiao_Ma">
+	    <b>Research: </b> Point Clouds Registration<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> mengjiao@nuaa.edu.cn </p> 
+  </td>
   <td> <p class="name-grade" id="Peng_Li">
 	    <b>Peng Li</b> <br />
-	    Ph.D. student (Since 2022)</p>
+	    Ph.D. student (Since 2023)</p>
 	<p class="other-info" id="Peng_Li">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
@@ -63,35 +71,28 @@ author_profile: true
 	</td>
   <td> <p class="name-grade" id="Chengyu_Zheng">
 	    <b>Chengyu Zheng</b> <br />
-	    Ph.D. student (Since 2022)</p>
+	    Ph.D. student (Since 2023)</p>
 	  <p class="other-info" id="Chengyu_Zheng">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> zhengcy@nuaa.edu.cn </p> 
 	</td>
-  <td> <p class="name-grade" id="Zhe_Zhu">
-	    <b>Zhe Zhu</b> <br />
-	    Ph.D. student (Since 2022)</p>
-	<p class="other-info" id="Zhe_Zhu">
-	    <b>Research: </b> Machine Learning <br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> zhuzhe0619@163.com </p> 
-	</td>
 </tr>
+	
 <tr>
-  <td> <img src="/images/group/mengjiaoma.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/zhezhu.jpg" width="110" height="160"></td>
   <td> </td>
   <td></td>
 </tr>
 <tr>
-  <td> <p class="name-grade" id="Mengjiao_Ma">
-	    <b>Mengjiao Ma</b> <br />
-	    Ph.D. student (Since 2022)</p>
-       <p class="other-info" id="Mengjiao_Ma">
-	    <b>Research: </b> 3D Point Clouds Processing<br />
+   <td> <p class="name-grade" id="Zhe_Zhu">
+	    <b>Zhe Zhu</b> <br />
+	    Ph.D. student (Since 2023)</p>
+	<p class="other-info" id="Zhe_Zhu">
+	    <b>Research: </b> 3D Reconstruction and Generation <br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> mengjiao@nuaa.edu.cn </p> 
-  </td>
+            <b> Email: </b> zhuzhe0619@nuaa.edu.cn </p> 
+	</td>
   <td> </td>
   <td> </td>
 </tr>
@@ -107,36 +108,6 @@ author_profile: true
 <ul id="masterstudent">
 		
 <table>
-<tr>
-  <td> <img src="/images/group/feihu.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/dingshi.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/jingboqiu.jpg" width="110" height="160"></td>
-</tr>
-<tr>
-  <td> <p class="name-grade" id="Fei_Hu">
-	    <b>Fei Hu</b> <br />
-	    M.Sc. student (Since 2020)</p>
-	<p class="other-info" id="Fei_Hu">
-	    <b>Research: </b> Machine Learning<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> 1127368546@nuaa.edu.cn </p></td>
-	
-  <td> <p class="name-grade" id="Ding_Shi">
-	    <b>Ding Shi</b> <br />
-	    M.Sc. student (Since 2020)</p>
-	<p class="other-info" id="Ding_Shi">
-	    <b>Research: </b> Machine Learning<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> 704623189@qq.com </p></td>
-	
-  <td> <p class="name-grade" id="Jingbo_Qiu">
-	    <b>Jingbo Qiu</b> <br />
-	    M.Sc. student (Since 2020)</p>
-	<p class="other-info" id="Baian_Chen">
-	    <b>Research: </b> Machine Learning<br />
-            <b> Office: </b> 106A, College of Computer Science and Technology <br />
-            <b> Email: </b> qiujingbo@nuaa.edu.cn </p></td>
-</tr>
 <tr>
   <td> <img src="/images/group/baianchen.jpg" width="110" height="160"></td>
   <td> <img src="/images/group/chenchen.JPG" width="110" height="160"></td>
@@ -222,7 +193,7 @@ author_profile: true
 	    <b>Xing He</b> <br />
 	    M.Sc. student (Since 2022)</p>
 	<p class="other-info" id="Xing_He">
-	    <b>Research: </b> Machine Learning and Data-Driven 3D Data Analysis<br />
+	    <b>Research: </b> 3D Reconstruction and Completion<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> hexing@nuaa.edu.cn </p></td>
 </tr>
@@ -236,7 +207,7 @@ author_profile: true
 	    <b>Yihua Fan</b> <br/>
 	    M.Sc. student (Since 2022)</p>
 	<p class="other-info" id="Yihua_Fan">
-	    <b>Research: </b> Image Restoration and Detection<br />
+	    <b>Research: </b> Image Restoration and Object Detection<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> fanyihua@nuaa.edu.cn </p></td>
 	
@@ -258,7 +229,7 @@ author_profile: true
 	<tr>
   <td> <img src="/images/group/zhikunwen.jpg" width="110" height="160"></td>
   <td> <img src="/images/group/xiaoqinpeng.JPG" width="110" height="160"></td>
-  <td> <img src="/images/group/dongli.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/hechongli.jpg" width="110" height="160"></td>
 </tr>
 <tr>
   <td> <p class="name-grade" id="Zhikun_Wen">
@@ -268,7 +239,6 @@ author_profile: true
 	    <b>Research: </b> 3D Point Cloud Processing<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> zhikun_wen@nuaa.edu.cn </p></td>
-	
   <td> <p class="name-grade" id="Xiaoqin_Peng">
 	    <b>Xiaoqin Peng</b> <br />
 	    M.Sc. student (Since 2022)</p>
@@ -276,13 +246,142 @@ author_profile: true
 	    <b>Research: </b> 3D Point Clouds Processing<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> pengxiaoqin@nuaa.edu.cn </p></td>
-   <td><p class="name-grade" id="Dong_Li">
+   <td><p class="name-grade" id="Hechong_Li">
+	    <b>Hechong Li</b> <br />
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Hechong_Li">
+	    <b>Research: </b> Computer Vision<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> hechongli@nuaa.edu.cn </p></td>
+</tr>
+</tr>
+<tr>
+  <td> <img src="/images/group/yutongshe.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/dongli.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/longzhang.jpg" width="110" height="160"></td>
+</tr>
+
+<tr>
+  <td><p class="name-grade" id="Yutong_She">
+	    <b>Yutong She</b> <br />
+	    M.Sc. student (Since 2022)</p>
+	<p class="other-info" id="Yutong_She">
+	    <b>Research: </b> Monocular depth estimation, 2D images processing<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> yutong.she@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Dong_Li">
 	    <b>Dong Li</b> <br />
 	    M.Sc. student (Since 2022)</p>
 	<p class="other-info" id="Dong_Li">
-	    <b>Research: </b> Machine Learning<br />
+	    <b>Research: </b> 3D Point Clouds Processing<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> donny1i@nuaa.edu.cn </p></td>
+   <td><p class="name-grade" id="Long_Zhang">
+	    <b>Long Zhang</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Dong_Li">
+	    <b>Research: </b> 6DoF<br />
+            <b> Email: </b> zhanglong@nuaa.edu.cn </p></td>
+</tr>
+
+<tr>
+  <td> <img src="/images/group/lutaozhang.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/yinuozheng.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/jiaxiuzhang.jpg" width="110" height="160"></td>
+</tr>
+
+<tr>
+  <td><p class="name-grade" id="Lutao_Zhang">
+	    <b>Lutao Zhang</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Lutao_Zhang">
+	    <b>Research: </b> 6D pose estimation<br />
+            <b> Email: </b> zhanglutao@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Yinuo_Zheng">
+	    <b>Yinuo Zheng</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Yinuo_Zheng">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> zhyinuo@nuaa.edu.cn </p></td>
+   <td><p class="name-grade" id="Jiaxiu_Zhang">
+	    <b>Jiaxiu Zhang</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Jiaxiu_Zhang">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
+            <b> Email: </b> jiaxiu@nuaa.edu.cn </p></td>
+</tr>
+	
+<tr>
+  <td> <img src="/images/group/qunji.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/yuqi.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/dequankong.jpg" width="110" height="160"></td>
+</tr>
+
+<tr>
+  <td><p class="name-grade" id="Qun_Ji">
+	    <b>Qun Ji</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Lutao_Zhang">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
+            <b> Email: </b> ji.qun@nuaa.edu.cn </p></td>
+  <td> <p class="name-grade" id="Yu_Qi">
+	    <b>Yu Qi</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Yu_Qi">
+	    <b>Research: </b> 3D Point Clouds Processing<br />
+            <b> Email: </b> qiyu810@nuaa.edu.cn </p></td>
+   <td><p class="name-grade" id="Dequan_Kong">
+	    <b>Dequan Kong</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Dequan_Kong">
+	    <b>Research: </b> Point Cloud Registration<br />
+            <b> Email: </b>dqkong@nuaa.edu.cn </p></td>
+</tr>
+	
+<tr>
+  <td> <img src="/images/group/liangyuanzhang.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/siminhu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/anzhao.jpg" width="110" height="160"></td>
+</tr>
+
+<tr>
+  <td><p class="name-grade" id="Liangyuan_Zhang">
+	    <b>Liangyuan Zhang</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Liangyuan Zhang">
+	    <b>Research: </b> 3D Point Cloud Semantic Secne Completion<br />
+            <b> Email: </b> liangyuanzhang@nuaa.edu.cn </p></td>
+  <td> <p class="name-grade" id="Simin_Hu">
+	    <b>Simin Hu</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="Simin_Hu">
+	    <b>Research: </b> 3D Reconstruction<br />
+            <b> Email: </b> qiyu810@nuaa.edu.cn </p></td>
+   <td><p class="name-grade" id="An_Zhao">
+	    <b>An Zhao</b> <br />
+	    M.Sc. student (Since 2023)</p>
+	<p class="other-info" id="An_Zhao">
+	    <b>Research: </b> Computer Graphics<br />
+            <b> Email: </b>anzhao@nuaa.edu.cn </p></td>
+</tr>
+<tr>
+  <td> <img src="/images/group/anli.jpg" width="110" height="160"></td>
+  <td> </td>
+  <td></td>
+</tr>
+<tr>
+  <td> <p class="name-grade" id="An_Li">
+	    <b>An Li</b> <br />
+	    M.Sc. student (Since 2023)</p>
+       <p class="other-info" id="An_Li">
+	    <b>Research: </b> 3D Object Detection and Tracking<br />
+            <b> Email: </b> Email: lian@nuaa.edu.cn <br /></p> 
+  </td>
+  <td> </td>
+  <td> </td>
 </tr>
 </table>
 	
@@ -290,21 +389,77 @@ author_profile: true
 <ul id="undergraduatestudent">
 <table>
 <tr>
-  <td> <img src="/images/group/yinuozheng.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/shijiewang.jpg" width="110" height="160"></td>
   <td> </td>
   <td></td>
 </tr>
 <tr>
-  <td> <p class="name-grade" id="Yinuo_Zheng">
-	    <b>Yinuo Zheng</b> <br />
-	    Undergraduate student (Since 2019)</p>
+  <td> <p class="name-grade" id="Shijie_Wang">
+	    <b>Shijie Wang</b> <br />
+	    Undergraduate student (Since 2023)</p>
        <p class="other-info" id="Yinuo_Zheng">
-	    <b>Research: </b> 3D Point Clouds Processing<br />
-            <b> Email: </b> 582952298@qq.com <br /></p> 
+	    <b>Research: </b> 3D Object Detection and Tracking<br />
+            <b> Email: </b> sw.w@qq.com <br /></p> 
   </td>
   <td> </td>
   <td> </td>
 </tr>
+</table>
+	
+<!--clear--> <div style="clear:both;"></div>            
+        </ul>
+	
+</body>
+
+<h1>Alumni</h1><br />
+<ul id="alumni">
+<table>
+
+<tr>
+  <td> <p class="name-grade" id="Fei_Hu">
+	    <b>Fei Hu</b> <br />
+	    M.Sc. student (Since 2020)</p>
+	<p class="other-info" id="Fei_Hu">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> 1127368546@nuaa.edu.cn </p></td>
+	
+  <td> <p class="name-grade" id="Ding_Shi">
+	    <b>Ding Shi</b> <br />
+	    M.Sc. student (Since 2020)</p>
+	<p class="other-info" id="Ding_Shi">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> 704623189@qq.com </p></td>
+	
+  <td> <p class="name-grade" id="Jingbo_Qiu">
+	    <b>Jingbo Qiu</b> <br />
+	    M.Sc. student (Since 2020)</p>
+	<p class="other-info" id="Baian_Chen">
+	    <b>Research: </b> Machine Learning<br />
+            <b> Office: </b> 106A, College of Computer Science and Technology <br />
+            <b> Email: </b> qiujingbo@nuaa.edu.cn </p></td>
+</tr>
+	
+<tr>
+  <td> <img src="/images/group/yongzhenwang.jpg" width="110" height="160"></td>
+  <td> </td>
+  <td></td>
+</tr>
+
+<td> <p class="name-grade" id="Yongzhen_Wang">
+	    <b>Yongzhen Wang</b> <br />
+	    Ph.D. student (Since 2019)</p>
+	<p class="other-info" id="Yongzhen_Wang">
+	    <b>Research: </b> Image Restoration and Object Detection<br />
+            <b> Email: </b> wangyz@nuaa.edu.cn </p> 
+	</td>	
+<tr>
+  <td> <img src="/images/group/feihu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/dingshi.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/jingboqiu.jpg" width="110" height="160"></td>
+</tr>
+	
 </table>
 	
 <!--clear--> <div style="clear:both;"></div>            
